parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CTE_ARR

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM gotomain varsblock funcsblock main FIN SEMICOLON
Rule 2     gotomain -> empty
Rule 3     main -> MAIN setmain LPAREN RPAREN LCURLY varsblock block RCURLY
Rule 4     setmain -> empty
Rule 5     funcsblock -> funcs funcsblock
Rule 6     funcsblock -> empty
Rule 7     funcs -> FUNCDEF choosetype setscope LPAREN paramsblock RPAREN LCURLY varsblock block RCURLY
Rule 8     setscope -> ID
Rule 9     varsblock -> vars varsblock
Rule 10    varsblock -> empty
Rule 11    vars -> VARDEF type ID vars1 SEMICOLON
Rule 12    vars1 -> LBRACKET CTE_INT RBRACKET
Rule 13    vars1 -> empty
Rule 14    choosetype -> type
Rule 15    choosetype -> VOID
Rule 16    paramsblock -> params paramsblock
Rule 17    paramsblock -> COMMA params paramsblock
Rule 18    paramsblock -> empty
Rule 19    params -> type ID
Rule 20    params -> empty
Rule 21    block -> statute SEMICOLON block
Rule 22    block -> empty
Rule 23    statute -> cond
Rule 24    statute -> assign
Rule 25    statute -> call
Rule 26    statute -> cin
Rule 27    statute -> cout
Rule 28    statute -> delay
Rule 29    statute -> forward
Rule 30    statute -> backward
Rule 31    statute -> turnleft
Rule 32    statute -> turnright
Rule 33    statute -> servo
Rule 34    statute -> lights
Rule 35    statute -> display
Rule 36    statute -> distance
Rule 37    statute -> stop
Rule 38    statute -> while
Rule 39    statute -> return
Rule 40    cond -> IF LPAREN express RPAREN LCURLY gotoif block RCURLY else
Rule 41    gotoif -> empty
Rule 42    else -> ELSE LCURLY gotoelse block RCURLY else
Rule 43    else -> empty
Rule 44    gotoelse -> empty
Rule 45    assign -> ID assign1 ASSIGN express
Rule 46    assign1 -> LBRACKET express RBRACKET
Rule 47    assign1 -> empty
Rule 48    call -> era LPAREN paramcall RPAREN
Rule 49    era -> ID
Rule 50    paramcall -> express paramcall1
Rule 51    paramcall1 -> COMMA paramcall
Rule 52    paramcall1 -> empty
Rule 53    cin -> CIN cin1
Rule 54    cin1 -> cin2
Rule 55    cin1 -> cin3
Rule 56    cin2 -> LPAREN ID RPAREN
Rule 57    cin3 -> LBRACKET CTE_INT RBRACKET LPAREN cin4 RPAREN
Rule 58    cin4 -> COMMA ID cin4
Rule 59    cin4 -> empty
Rule 60    cout -> COUT LPAREN express cout1 RPAREN
Rule 61    cout1 -> COMMA express cout1
Rule 62    cout1 -> empty
Rule 63    delay -> DELAY LPAREN express RPAREN
Rule 64    forward -> FORWARD LPAREN express COMMA express RPAREN
Rule 65    backward -> BACKWARD LPAREN express COMMA express RPAREN
Rule 66    turnleft -> TURNLEFT LPAREN express COMMA express RPAREN
Rule 67    turnright -> TURNRIGHT LPAREN express COMMA express RPAREN
Rule 68    servo -> SERVO LPAREN express RPAREN
Rule 69    lights -> LIGHTS LPAREN express COMMA express RPAREN
Rule 70    display -> DISPLAY LPAREN express RPAREN
Rule 71    distance -> DISTANCE LPAREN RPAREN
Rule 72    stop -> STOP LPAREN RPAREN
Rule 73    while -> WHILE LPAREN express RPAREN while1 LCURLY block RCURLY
Rule 74    while1 -> empty
Rule 75    return -> RETURN LPAREN express RPAREN
Rule 76    type -> INT
Rule 77    type -> FLOAT
Rule 78    type -> BOOL
Rule 79    type -> CHAR
Rule 80    constant -> ID
Rule 81    constant -> CTE_INT
Rule 82    constant -> CTE_FLOAT
Rule 83    constant -> CTE_CHAR
Rule 84    constant -> CTE_BOOL
Rule 85    express -> express1 relational express2
Rule 86    express1 -> NOTEQUALS
Rule 87    express1 -> empty
Rule 88    express2 -> andor express
Rule 89    express2 -> empty
Rule 90    andor -> AND
Rule 91    andor -> OR
Rule 92    relational -> exp relational1
Rule 93    relational -> NOT
Rule 94    relational1 -> compare exp
Rule 95    relational1 -> empty
Rule 96    compare -> LESSTHAN
Rule 97    compare -> GREATERTHAN
Rule 98    compare -> EQUALS
Rule 99    compare -> NOTEQUALS
Rule 100   exp -> term exp1
Rule 101   exp1 -> plusminus exp
Rule 102   exp1 -> empty
Rule 103   plusminus -> PLUS
Rule 104   plusminus -> MINUS
Rule 105   term -> factor term1
Rule 106   term1 -> multidivi term
Rule 107   term1 -> empty
Rule 108   multidivi -> MULTI
Rule 109   multidivi -> DIVI
Rule 110   factor -> LPAREN express RPAREN
Rule 111   factor -> constant
Rule 112   factor -> call
Rule 113   empty -> <empty>

Terminals, with rules where they appear

AND                  : 90
ASSIGN               : 45
BACKWARD             : 65
BOOL                 : 78
CHAR                 : 79
CIN                  : 53
COMMA                : 17 51 58 61 64 65 66 67 69
COUT                 : 60
CTE_ARR              : 
CTE_BOOL             : 84
CTE_CHAR             : 83
CTE_FLOAT            : 82
CTE_INT              : 12 57 81
DELAY                : 63
DISPLAY              : 70
DISTANCE             : 71
DIVI                 : 109
ELSE                 : 42
EQUALS               : 98
FIN                  : 1
FLOAT                : 77
FORWARD              : 64
FUNCDEF              : 7
GREATERTHAN          : 97
ID                   : 8 11 19 45 49 56 58 80
IF                   : 40
INT                  : 76
LBRACKET             : 12 46 57
LCURLY               : 3 7 40 42 73
LESSTHAN             : 96
LIGHTS               : 69
LPAREN               : 3 7 40 48 56 57 60 63 64 65 66 67 68 69 70 71 72 73 75 110
MAIN                 : 3
MINUS                : 104
MULTI                : 108
NOT                  : 93
NOTEQUALS            : 86 99
OR                   : 91
PLUS                 : 103
PROGRAM              : 1
RBRACKET             : 12 46 57
RCURLY               : 3 7 40 42 73
RETURN               : 75
RPAREN               : 3 7 40 48 56 57 60 63 64 65 66 67 68 69 70 71 72 73 75 110
SEMICOLON            : 1 11 21
SERVO                : 68
STOP                 : 72
TURNLEFT             : 66
TURNRIGHT            : 67
VARDEF               : 11
VOID                 : 15
WHILE                : 73
error                : 

Nonterminals, with rules where they appear

andor                : 88
assign               : 24
assign1              : 45
backward             : 30
block                : 3 7 21 40 42 73
call                 : 25 112
choosetype           : 7
cin                  : 26
cin1                 : 53
cin2                 : 54
cin3                 : 55
cin4                 : 57 58
compare              : 94
cond                 : 23
constant             : 111
cout                 : 27
cout1                : 60 61
delay                : 28
display              : 35
distance             : 36
else                 : 40 42
empty                : 2 4 6 10 13 18 20 22 41 43 44 47 52 59 62 74 87 89 95 102 107
era                  : 48
exp                  : 92 94 101
exp1                 : 100
express              : 40 45 46 50 60 61 63 64 64 65 65 66 66 67 67 68 69 69 70 73 75 88 110
express1             : 85
express2             : 85
factor               : 105
forward              : 29
funcs                : 5
funcsblock           : 1 5
gotoelse             : 42
gotoif               : 40
gotomain             : 1
lights               : 34
main                 : 1
multidivi            : 106
paramcall            : 48 51
paramcall1           : 50
params               : 16 17
paramsblock          : 7 16 17
plusminus            : 101
program              : 0
relational           : 85
relational1          : 92
return               : 39
servo                : 33
setmain              : 3
setscope             : 7
statute              : 21
stop                 : 37
term                 : 100 106
term1                : 105
turnleft             : 31
turnright            : 32
type                 : 11 14 19
vars                 : 9
vars1                : 11
varsblock            : 1 3 7 9
while                : 38
while1               : 73

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM gotomain varsblock funcsblock main FIN SEMICOLON

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . gotomain varsblock funcsblock main FIN SEMICOLON
    (2) gotomain -> . empty
    (113) empty -> .

    VARDEF          reduce using rule 113 (empty -> .)
    FUNCDEF         reduce using rule 113 (empty -> .)
    MAIN            reduce using rule 113 (empty -> .)

    gotomain                       shift and go to state 3
    empty                          shift and go to state 4

state 3

    (1) program -> PROGRAM gotomain . varsblock funcsblock main FIN SEMICOLON
    (9) varsblock -> . vars varsblock
    (10) varsblock -> . empty
    (11) vars -> . VARDEF type ID vars1 SEMICOLON
    (113) empty -> .

    VARDEF          shift and go to state 8
    FUNCDEF         reduce using rule 113 (empty -> .)
    MAIN            reduce using rule 113 (empty -> .)

    varsblock                      shift and go to state 5
    vars                           shift and go to state 6
    empty                          shift and go to state 7

state 4

    (2) gotomain -> empty .

    VARDEF          reduce using rule 2 (gotomain -> empty .)
    FUNCDEF         reduce using rule 2 (gotomain -> empty .)
    MAIN            reduce using rule 2 (gotomain -> empty .)


state 5

    (1) program -> PROGRAM gotomain varsblock . funcsblock main FIN SEMICOLON
    (5) funcsblock -> . funcs funcsblock
    (6) funcsblock -> . empty
    (7) funcs -> . FUNCDEF choosetype setscope LPAREN paramsblock RPAREN LCURLY varsblock block RCURLY
    (113) empty -> .

    FUNCDEF         shift and go to state 12
    MAIN            reduce using rule 113 (empty -> .)

    funcsblock                     shift and go to state 9
    funcs                          shift and go to state 10
    empty                          shift and go to state 11

state 6

    (9) varsblock -> vars . varsblock
    (9) varsblock -> . vars varsblock
    (10) varsblock -> . empty
    (11) vars -> . VARDEF type ID vars1 SEMICOLON
    (113) empty -> .

    VARDEF          shift and go to state 8
    FUNCDEF         reduce using rule 113 (empty -> .)
    MAIN            reduce using rule 113 (empty -> .)
    IF              reduce using rule 113 (empty -> .)
    ID              reduce using rule 113 (empty -> .)
    CIN             reduce using rule 113 (empty -> .)
    COUT            reduce using rule 113 (empty -> .)
    DELAY           reduce using rule 113 (empty -> .)
    FORWARD         reduce using rule 113 (empty -> .)
    BACKWARD        reduce using rule 113 (empty -> .)
    TURNLEFT        reduce using rule 113 (empty -> .)
    TURNRIGHT       reduce using rule 113 (empty -> .)
    SERVO           reduce using rule 113 (empty -> .)
    LIGHTS          reduce using rule 113 (empty -> .)
    DISPLAY         reduce using rule 113 (empty -> .)
    DISTANCE        reduce using rule 113 (empty -> .)
    STOP            reduce using rule 113 (empty -> .)
    WHILE           reduce using rule 113 (empty -> .)
    RETURN          reduce using rule 113 (empty -> .)
    RCURLY          reduce using rule 113 (empty -> .)

    vars                           shift and go to state 6
    varsblock                      shift and go to state 13
    empty                          shift and go to state 7

state 7

    (10) varsblock -> empty .

    FUNCDEF         reduce using rule 10 (varsblock -> empty .)
    MAIN            reduce using rule 10 (varsblock -> empty .)
    IF              reduce using rule 10 (varsblock -> empty .)
    ID              reduce using rule 10 (varsblock -> empty .)
    CIN             reduce using rule 10 (varsblock -> empty .)
    COUT            reduce using rule 10 (varsblock -> empty .)
    DELAY           reduce using rule 10 (varsblock -> empty .)
    FORWARD         reduce using rule 10 (varsblock -> empty .)
    BACKWARD        reduce using rule 10 (varsblock -> empty .)
    TURNLEFT        reduce using rule 10 (varsblock -> empty .)
    TURNRIGHT       reduce using rule 10 (varsblock -> empty .)
    SERVO           reduce using rule 10 (varsblock -> empty .)
    LIGHTS          reduce using rule 10 (varsblock -> empty .)
    DISPLAY         reduce using rule 10 (varsblock -> empty .)
    DISTANCE        reduce using rule 10 (varsblock -> empty .)
    STOP            reduce using rule 10 (varsblock -> empty .)
    WHILE           reduce using rule 10 (varsblock -> empty .)
    RETURN          reduce using rule 10 (varsblock -> empty .)
    RCURLY          reduce using rule 10 (varsblock -> empty .)


state 8

    (11) vars -> VARDEF . type ID vars1 SEMICOLON
    (76) type -> . INT
    (77) type -> . FLOAT
    (78) type -> . BOOL
    (79) type -> . CHAR

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    BOOL            shift and go to state 17
    CHAR            shift and go to state 18

    type                           shift and go to state 14

state 9

    (1) program -> PROGRAM gotomain varsblock funcsblock . main FIN SEMICOLON
    (3) main -> . MAIN setmain LPAREN RPAREN LCURLY varsblock block RCURLY

    MAIN            shift and go to state 20

    main                           shift and go to state 19

state 10

    (5) funcsblock -> funcs . funcsblock
    (5) funcsblock -> . funcs funcsblock
    (6) funcsblock -> . empty
    (7) funcs -> . FUNCDEF choosetype setscope LPAREN paramsblock RPAREN LCURLY varsblock block RCURLY
    (113) empty -> .

    FUNCDEF         shift and go to state 12
    MAIN            reduce using rule 113 (empty -> .)

    funcs                          shift and go to state 10
    funcsblock                     shift and go to state 21
    empty                          shift and go to state 11

state 11

    (6) funcsblock -> empty .

    MAIN            reduce using rule 6 (funcsblock -> empty .)


state 12

    (7) funcs -> FUNCDEF . choosetype setscope LPAREN paramsblock RPAREN LCURLY varsblock block RCURLY
    (14) choosetype -> . type
    (15) choosetype -> . VOID
    (76) type -> . INT
    (77) type -> . FLOAT
    (78) type -> . BOOL
    (79) type -> . CHAR

    VOID            shift and go to state 24
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    BOOL            shift and go to state 17
    CHAR            shift and go to state 18

    choosetype                     shift and go to state 22
    type                           shift and go to state 23

state 13

    (9) varsblock -> vars varsblock .

    FUNCDEF         reduce using rule 9 (varsblock -> vars varsblock .)
    MAIN            reduce using rule 9 (varsblock -> vars varsblock .)
    IF              reduce using rule 9 (varsblock -> vars varsblock .)
    ID              reduce using rule 9 (varsblock -> vars varsblock .)
    CIN             reduce using rule 9 (varsblock -> vars varsblock .)
    COUT            reduce using rule 9 (varsblock -> vars varsblock .)
    DELAY           reduce using rule 9 (varsblock -> vars varsblock .)
    FORWARD         reduce using rule 9 (varsblock -> vars varsblock .)
    BACKWARD        reduce using rule 9 (varsblock -> vars varsblock .)
    TURNLEFT        reduce using rule 9 (varsblock -> vars varsblock .)
    TURNRIGHT       reduce using rule 9 (varsblock -> vars varsblock .)
    SERVO           reduce using rule 9 (varsblock -> vars varsblock .)
    LIGHTS          reduce using rule 9 (varsblock -> vars varsblock .)
    DISPLAY         reduce using rule 9 (varsblock -> vars varsblock .)
    DISTANCE        reduce using rule 9 (varsblock -> vars varsblock .)
    STOP            reduce using rule 9 (varsblock -> vars varsblock .)
    WHILE           reduce using rule 9 (varsblock -> vars varsblock .)
    RETURN          reduce using rule 9 (varsblock -> vars varsblock .)
    RCURLY          reduce using rule 9 (varsblock -> vars varsblock .)


state 14

    (11) vars -> VARDEF type . ID vars1 SEMICOLON

    ID              shift and go to state 25


state 15

    (76) type -> INT .

    ID              reduce using rule 76 (type -> INT .)


state 16

    (77) type -> FLOAT .

    ID              reduce using rule 77 (type -> FLOAT .)


state 17

    (78) type -> BOOL .

    ID              reduce using rule 78 (type -> BOOL .)


state 18

    (79) type -> CHAR .

    ID              reduce using rule 79 (type -> CHAR .)


state 19

    (1) program -> PROGRAM gotomain varsblock funcsblock main . FIN SEMICOLON

    FIN             shift and go to state 26


state 20

    (3) main -> MAIN . setmain LPAREN RPAREN LCURLY varsblock block RCURLY
    (4) setmain -> . empty
    (113) empty -> .

    LPAREN          reduce using rule 113 (empty -> .)

    setmain                        shift and go to state 27
    empty                          shift and go to state 28

state 21

    (5) funcsblock -> funcs funcsblock .

    MAIN            reduce using rule 5 (funcsblock -> funcs funcsblock .)


state 22

    (7) funcs -> FUNCDEF choosetype . setscope LPAREN paramsblock RPAREN LCURLY varsblock block RCURLY
    (8) setscope -> . ID

    ID              shift and go to state 30

    setscope                       shift and go to state 29

state 23

    (14) choosetype -> type .

    ID              reduce using rule 14 (choosetype -> type .)


state 24

    (15) choosetype -> VOID .

    ID              reduce using rule 15 (choosetype -> VOID .)


state 25

    (11) vars -> VARDEF type ID . vars1 SEMICOLON
    (12) vars1 -> . LBRACKET CTE_INT RBRACKET
    (13) vars1 -> . empty
    (113) empty -> .

    LBRACKET        shift and go to state 32
    SEMICOLON       reduce using rule 113 (empty -> .)

    vars1                          shift and go to state 31
    empty                          shift and go to state 33

state 26

    (1) program -> PROGRAM gotomain varsblock funcsblock main FIN . SEMICOLON

    SEMICOLON       shift and go to state 34


state 27

    (3) main -> MAIN setmain . LPAREN RPAREN LCURLY varsblock block RCURLY

    LPAREN          shift and go to state 35


state 28

    (4) setmain -> empty .

    LPAREN          reduce using rule 4 (setmain -> empty .)


state 29

    (7) funcs -> FUNCDEF choosetype setscope . LPAREN paramsblock RPAREN LCURLY varsblock block RCURLY

    LPAREN          shift and go to state 36


state 30

    (8) setscope -> ID .

    LPAREN          reduce using rule 8 (setscope -> ID .)


state 31

    (11) vars -> VARDEF type ID vars1 . SEMICOLON

    SEMICOLON       shift and go to state 37


state 32

    (12) vars1 -> LBRACKET . CTE_INT RBRACKET

    CTE_INT         shift and go to state 38


state 33

    (13) vars1 -> empty .

    SEMICOLON       reduce using rule 13 (vars1 -> empty .)


state 34

    (1) program -> PROGRAM gotomain varsblock funcsblock main FIN SEMICOLON .

    $end            reduce using rule 1 (program -> PROGRAM gotomain varsblock funcsblock main FIN SEMICOLON .)


state 35

    (3) main -> MAIN setmain LPAREN . RPAREN LCURLY varsblock block RCURLY

    RPAREN          shift and go to state 39


state 36

    (7) funcs -> FUNCDEF choosetype setscope LPAREN . paramsblock RPAREN LCURLY varsblock block RCURLY
    (16) paramsblock -> . params paramsblock
    (17) paramsblock -> . COMMA params paramsblock
    (18) paramsblock -> . empty
    (19) params -> . type ID
    (20) params -> . empty
    (113) empty -> .
    (76) type -> . INT
    (77) type -> . FLOAT
    (78) type -> . BOOL
    (79) type -> . CHAR

  ! shift/reduce conflict for COMMA resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    COMMA           shift and go to state 42
    RPAREN          reduce using rule 113 (empty -> .)
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    BOOL            shift and go to state 17
    CHAR            shift and go to state 18

  ! COMMA           [ reduce using rule 113 (empty -> .) ]
  ! INT             [ reduce using rule 113 (empty -> .) ]
  ! FLOAT           [ reduce using rule 113 (empty -> .) ]
  ! BOOL            [ reduce using rule 113 (empty -> .) ]
  ! CHAR            [ reduce using rule 113 (empty -> .) ]

    paramsblock                    shift and go to state 40
    params                         shift and go to state 41
    empty                          shift and go to state 43
    type                           shift and go to state 44

state 37

    (11) vars -> VARDEF type ID vars1 SEMICOLON .

    VARDEF          reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    FUNCDEF         reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    MAIN            reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    IF              reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    ID              reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    CIN             reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    COUT            reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    DELAY           reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    FORWARD         reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    BACKWARD        reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    TURNLEFT        reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    TURNRIGHT       reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    SERVO           reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    LIGHTS          reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    DISPLAY         reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    DISTANCE        reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    STOP            reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    WHILE           reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    RETURN          reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)
    RCURLY          reduce using rule 11 (vars -> VARDEF type ID vars1 SEMICOLON .)


state 38

    (12) vars1 -> LBRACKET CTE_INT . RBRACKET

    RBRACKET        shift and go to state 45


state 39

    (3) main -> MAIN setmain LPAREN RPAREN . LCURLY varsblock block RCURLY

    LCURLY          shift and go to state 46


state 40

    (7) funcs -> FUNCDEF choosetype setscope LPAREN paramsblock . RPAREN LCURLY varsblock block RCURLY

    RPAREN          shift and go to state 47


state 41

    (16) paramsblock -> params . paramsblock
    (16) paramsblock -> . params paramsblock
    (17) paramsblock -> . COMMA params paramsblock
    (18) paramsblock -> . empty
    (19) params -> . type ID
    (20) params -> . empty
    (113) empty -> .
    (76) type -> . INT
    (77) type -> . FLOAT
    (78) type -> . BOOL
    (79) type -> . CHAR

  ! shift/reduce conflict for COMMA resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    COMMA           shift and go to state 42
    RPAREN          reduce using rule 113 (empty -> .)
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    BOOL            shift and go to state 17
    CHAR            shift and go to state 18

  ! COMMA           [ reduce using rule 113 (empty -> .) ]
  ! INT             [ reduce using rule 113 (empty -> .) ]
  ! FLOAT           [ reduce using rule 113 (empty -> .) ]
  ! BOOL            [ reduce using rule 113 (empty -> .) ]
  ! CHAR            [ reduce using rule 113 (empty -> .) ]

    params                         shift and go to state 41
    paramsblock                    shift and go to state 48
    empty                          shift and go to state 43
    type                           shift and go to state 44

state 42

    (17) paramsblock -> COMMA . params paramsblock
    (19) params -> . type ID
    (20) params -> . empty
    (76) type -> . INT
    (77) type -> . FLOAT
    (78) type -> . BOOL
    (79) type -> . CHAR
    (113) empty -> .

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    BOOL            shift and go to state 17
    CHAR            shift and go to state 18
    COMMA           reduce using rule 113 (empty -> .)
    RPAREN          reduce using rule 113 (empty -> .)

  ! INT             [ reduce using rule 113 (empty -> .) ]
  ! FLOAT           [ reduce using rule 113 (empty -> .) ]
  ! BOOL            [ reduce using rule 113 (empty -> .) ]
  ! CHAR            [ reduce using rule 113 (empty -> .) ]

    params                         shift and go to state 49
    type                           shift and go to state 44
    empty                          shift and go to state 50

state 43

    (18) paramsblock -> empty .
    (20) params -> empty .

  ! reduce/reduce conflict for RPAREN resolved using rule 18 (paramsblock -> empty .)
    RPAREN          reduce using rule 18 (paramsblock -> empty .)
    COMMA           reduce using rule 20 (params -> empty .)
    INT             reduce using rule 20 (params -> empty .)
    FLOAT           reduce using rule 20 (params -> empty .)
    BOOL            reduce using rule 20 (params -> empty .)
    CHAR            reduce using rule 20 (params -> empty .)

  ! RPAREN          [ reduce using rule 20 (params -> empty .) ]


state 44

    (19) params -> type . ID

    ID              shift and go to state 51


state 45

    (12) vars1 -> LBRACKET CTE_INT RBRACKET .

    SEMICOLON       reduce using rule 12 (vars1 -> LBRACKET CTE_INT RBRACKET .)


state 46

    (3) main -> MAIN setmain LPAREN RPAREN LCURLY . varsblock block RCURLY
    (9) varsblock -> . vars varsblock
    (10) varsblock -> . empty
    (11) vars -> . VARDEF type ID vars1 SEMICOLON
    (113) empty -> .

    VARDEF          shift and go to state 8
    IF              reduce using rule 113 (empty -> .)
    ID              reduce using rule 113 (empty -> .)
    CIN             reduce using rule 113 (empty -> .)
    COUT            reduce using rule 113 (empty -> .)
    DELAY           reduce using rule 113 (empty -> .)
    FORWARD         reduce using rule 113 (empty -> .)
    BACKWARD        reduce using rule 113 (empty -> .)
    TURNLEFT        reduce using rule 113 (empty -> .)
    TURNRIGHT       reduce using rule 113 (empty -> .)
    SERVO           reduce using rule 113 (empty -> .)
    LIGHTS          reduce using rule 113 (empty -> .)
    DISPLAY         reduce using rule 113 (empty -> .)
    DISTANCE        reduce using rule 113 (empty -> .)
    STOP            reduce using rule 113 (empty -> .)
    WHILE           reduce using rule 113 (empty -> .)
    RETURN          reduce using rule 113 (empty -> .)
    RCURLY          reduce using rule 113 (empty -> .)

    varsblock                      shift and go to state 52
    vars                           shift and go to state 6
    empty                          shift and go to state 7

state 47

    (7) funcs -> FUNCDEF choosetype setscope LPAREN paramsblock RPAREN . LCURLY varsblock block RCURLY

    LCURLY          shift and go to state 53


state 48

    (16) paramsblock -> params paramsblock .

    RPAREN          reduce using rule 16 (paramsblock -> params paramsblock .)


state 49

    (17) paramsblock -> COMMA params . paramsblock
    (16) paramsblock -> . params paramsblock
    (17) paramsblock -> . COMMA params paramsblock
    (18) paramsblock -> . empty
    (19) params -> . type ID
    (20) params -> . empty
    (113) empty -> .
    (76) type -> . INT
    (77) type -> . FLOAT
    (78) type -> . BOOL
    (79) type -> . CHAR

  ! shift/reduce conflict for COMMA resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    COMMA           shift and go to state 42
    RPAREN          reduce using rule 113 (empty -> .)
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    BOOL            shift and go to state 17
    CHAR            shift and go to state 18

  ! COMMA           [ reduce using rule 113 (empty -> .) ]
  ! INT             [ reduce using rule 113 (empty -> .) ]
  ! FLOAT           [ reduce using rule 113 (empty -> .) ]
  ! BOOL            [ reduce using rule 113 (empty -> .) ]
  ! CHAR            [ reduce using rule 113 (empty -> .) ]

    params                         shift and go to state 41
    paramsblock                    shift and go to state 54
    empty                          shift and go to state 43
    type                           shift and go to state 44

state 50

    (20) params -> empty .

    COMMA           reduce using rule 20 (params -> empty .)
    INT             reduce using rule 20 (params -> empty .)
    FLOAT           reduce using rule 20 (params -> empty .)
    BOOL            reduce using rule 20 (params -> empty .)
    CHAR            reduce using rule 20 (params -> empty .)
    RPAREN          reduce using rule 20 (params -> empty .)


state 51

    (19) params -> type ID .

    COMMA           reduce using rule 19 (params -> type ID .)
    INT             reduce using rule 19 (params -> type ID .)
    FLOAT           reduce using rule 19 (params -> type ID .)
    BOOL            reduce using rule 19 (params -> type ID .)
    CHAR            reduce using rule 19 (params -> type ID .)
    RPAREN          reduce using rule 19 (params -> type ID .)


state 52

    (3) main -> MAIN setmain LPAREN RPAREN LCURLY varsblock . block RCURLY
    (21) block -> . statute SEMICOLON block
    (22) block -> . empty
    (23) statute -> . cond
    (24) statute -> . assign
    (25) statute -> . call
    (26) statute -> . cin
    (27) statute -> . cout
    (28) statute -> . delay
    (29) statute -> . forward
    (30) statute -> . backward
    (31) statute -> . turnleft
    (32) statute -> . turnright
    (33) statute -> . servo
    (34) statute -> . lights
    (35) statute -> . display
    (36) statute -> . distance
    (37) statute -> . stop
    (38) statute -> . while
    (39) statute -> . return
    (113) empty -> .
    (40) cond -> . IF LPAREN express RPAREN LCURLY gotoif block RCURLY else
    (45) assign -> . ID assign1 ASSIGN express
    (48) call -> . era LPAREN paramcall RPAREN
    (53) cin -> . CIN cin1
    (60) cout -> . COUT LPAREN express cout1 RPAREN
    (63) delay -> . DELAY LPAREN express RPAREN
    (64) forward -> . FORWARD LPAREN express COMMA express RPAREN
    (65) backward -> . BACKWARD LPAREN express COMMA express RPAREN
    (66) turnleft -> . TURNLEFT LPAREN express COMMA express RPAREN
    (67) turnright -> . TURNRIGHT LPAREN express COMMA express RPAREN
    (68) servo -> . SERVO LPAREN express RPAREN
    (69) lights -> . LIGHTS LPAREN express COMMA express RPAREN
    (70) display -> . DISPLAY LPAREN express RPAREN
    (71) distance -> . DISTANCE LPAREN RPAREN
    (72) stop -> . STOP LPAREN RPAREN
    (73) while -> . WHILE LPAREN express RPAREN while1 LCURLY block RCURLY
    (75) return -> . RETURN LPAREN express RPAREN
    (49) era -> . ID

    RCURLY          reduce using rule 113 (empty -> .)
    IF              shift and go to state 75
    ID              shift and go to state 76
    CIN             shift and go to state 78
    COUT            shift and go to state 79
    DELAY           shift and go to state 80
    FORWARD         shift and go to state 81
    BACKWARD        shift and go to state 82
    TURNLEFT        shift and go to state 83
    TURNRIGHT       shift and go to state 84
    SERVO           shift and go to state 85
    LIGHTS          shift and go to state 86
    DISPLAY         shift and go to state 87
    DISTANCE        shift and go to state 88
    STOP            shift and go to state 89
    WHILE           shift and go to state 90
    RETURN          shift and go to state 91

    block                          shift and go to state 55
    statute                        shift and go to state 56
    empty                          shift and go to state 57
    cond                           shift and go to state 58
    assign                         shift and go to state 59
    call                           shift and go to state 60
    cin                            shift and go to state 61
    cout                           shift and go to state 62
    delay                          shift and go to state 63
    forward                        shift and go to state 64
    backward                       shift and go to state 65
    turnleft                       shift and go to state 66
    turnright                      shift and go to state 67
    servo                          shift and go to state 68
    lights                         shift and go to state 69
    display                        shift and go to state 70
    distance                       shift and go to state 71
    stop                           shift and go to state 72
    while                          shift and go to state 73
    return                         shift and go to state 74
    era                            shift and go to state 77

state 53

    (7) funcs -> FUNCDEF choosetype setscope LPAREN paramsblock RPAREN LCURLY . varsblock block RCURLY
    (9) varsblock -> . vars varsblock
    (10) varsblock -> . empty
    (11) vars -> . VARDEF type ID vars1 SEMICOLON
    (113) empty -> .

    VARDEF          shift and go to state 8
    IF              reduce using rule 113 (empty -> .)
    ID              reduce using rule 113 (empty -> .)
    CIN             reduce using rule 113 (empty -> .)
    COUT            reduce using rule 113 (empty -> .)
    DELAY           reduce using rule 113 (empty -> .)
    FORWARD         reduce using rule 113 (empty -> .)
    BACKWARD        reduce using rule 113 (empty -> .)
    TURNLEFT        reduce using rule 113 (empty -> .)
    TURNRIGHT       reduce using rule 113 (empty -> .)
    SERVO           reduce using rule 113 (empty -> .)
    LIGHTS          reduce using rule 113 (empty -> .)
    DISPLAY         reduce using rule 113 (empty -> .)
    DISTANCE        reduce using rule 113 (empty -> .)
    STOP            reduce using rule 113 (empty -> .)
    WHILE           reduce using rule 113 (empty -> .)
    RETURN          reduce using rule 113 (empty -> .)
    RCURLY          reduce using rule 113 (empty -> .)

    varsblock                      shift and go to state 92
    vars                           shift and go to state 6
    empty                          shift and go to state 7

state 54

    (17) paramsblock -> COMMA params paramsblock .
